[gd_scene load_steps=10 format=3 uid="uid://b53o8d1lkvnyg"]

[ext_resource type="FontFile" uid="uid://debggn5x54r8m" path="res://Assets/ObliviousFont.ttf" id="1_ggjao"]
[ext_resource type="Theme" uid="uid://cqcye1csd01b6" path="res://Assets/theme.tres" id="1_praoe"]
[ext_resource type="Script" path="res://Scripts/HealthCounter.gd" id="2_m1mkf"]
[ext_resource type="Script" path="res://Scripts/Weapon.gd" id="3_fsnwk"]
[ext_resource type="Script" path="res://Labels/ShieldCounter.gd" id="3_lq1ft"]
[ext_resource type="Script" path="res://Scripts/AmmoCounter.gd" id="4_fhveg"]
[ext_resource type="Script" path="res://Labels/LevelCounter.gd" id="4_nnh0d"]
[ext_resource type="Script" path="res://Scripts/MagCounter.gd" id="5_y4frv"]
[ext_resource type="Script" path="res://Scripts/SkillButtons.gd" id="6_k4ugm"]

[node name="UI" type="CanvasLayer"]

[node name="Panel" type="Panel" parent="."]
offset_right = 411.0
offset_bottom = 95.0

[node name="Panel2" type="Panel" parent="."]
offset_left = 870.0
offset_top = -53.0
offset_right = 1628.0
offset_bottom = 118.0

[node name="Panel3" type="Panel" parent="."]
offset_left = 1.0
offset_top = 599.0
offset_right = 304.0
offset_bottom = 647.0

[node name="Panel4" type="Panel" parent="."]
offset_left = 764.0
offset_top = 533.0
offset_right = 1487.0
offset_bottom = 684.0

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
offset_right = 436.0
offset_bottom = 159.0

[node name="HealthCounter" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_praoe")
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("1_ggjao")
theme_override_font_sizes/font_size = 40
text = "Health
"
script = ExtResource("2_m1mkf")

[node name="ShieldCounter" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.746345, 0.831222, 1, 1)
theme_override_fonts/font = ExtResource("1_ggjao")
theme_override_font_sizes/font_size = 40
text = "Sheilds
"
script = ExtResource("3_lq1ft")

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -39.0
offset_right = 360.0
grow_vertical = 0

[node name="LevelCounter" type="Label" parent="VBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ggjao")
theme_override_font_sizes/font_size = 30
text = "Level 1 Assasin
"
script = ExtResource("4_nnh0d")

[node name="VBoxContainer4" type="VBoxContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -333.0
offset_top = -107.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("6_k4ugm")

[node name="Skill1" type="Label" parent="VBoxContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ggjao")
theme_override_font_sizes/font_size = 30

[node name="Skill2" type="Label" parent="VBoxContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ggjao")
theme_override_font_sizes/font_size = 30
text = "
"

[node name="Skill3" type="Label" parent="VBoxContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ggjao")
theme_override_font_sizes/font_size = 30

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -112.0
offset_bottom = 86.0
grow_horizontal = 0

[node name="Weapon" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ggjao")
theme_override_font_sizes/font_size = 30
text = "Weapon: M4389
"
script = ExtResource("3_fsnwk")

[node name="AmmoCounter" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ggjao")
theme_override_font_sizes/font_size = 30
text = "Ammo
"
script = ExtResource("4_fhveg")

[node name="MagCounter" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ggjao")
theme_override_font_sizes/font_size = 30
text = "Mags
"
script = ExtResource("5_y4frv")
